trying to extract the init-sbt